@@ -9,29 +9,22 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <!-- =============================================================== -->
-    <!-- DistributionManagement 										 -->
-    <!-- =============================================================== -->
     <distributionManagement>
         <site>
-        <id>roguelike</id>
-        <url>scp://localhost/tmp/</url>
+            <id>roguelike</id>
+            <url>scp://localhost/tmp/</url>
         </site>
     </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>17</maven.compiler.release>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
 
         <checkstyle.config.location>google_checks.xml</checkstyle.config.location>
         <checkstyle.console>true</checkstyle.console>
         <checkstyle.violationSeverity>warning</checkstyle.violationSeverity>
-        <checkstyle.maxAllowedViolations>50000</checkstyle.maxAllowedViolations>
+        <checkstyle.maxAllowedViolations>5</checkstyle.maxAllowedViolations>
         <checkstyle.failOnViolation>true</checkstyle.failOnViolation>
-
-        <log4j.version>2.19.0</log4j.version>
 
         <mainClass>fr.uvsq.pglp.roguelike.Roguelike</mainClass>
     </properties>
@@ -56,22 +49,6 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-            <dependency>
-            <groupId>net.trystan</groupId>
-            <artifactId>ascii-panel</artifactId>
-            <version>1.1</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -83,28 +60,6 @@
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>3.2.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <configuration>
-                        <archive>
-                        <manifest>
-                            <mainClass>fr.uvsq.pglp.roguelike.Roguelike</mainClass>
-                        </manifest>
-                        </archive>
-                        <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                        </descriptorRefs>
-                    </configuration>
-                    <executions>
-                        <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        </execution>
-                    </executions>
                 </plugin>
                 <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                 <plugin>
@@ -157,41 +112,15 @@
                             <version>10.6.0</version>
                         </dependency>
                     </dependencies>
-                    <configuration>
-                        <configLocation>google_checks.xml</configLocation>
-                        <encoding>UTF-8</encoding>
-                        <consoleOutput>true</consoleOutput>
-                        <failsOnError>true</failsOnError>
-                        <linkXRef>false</linkXRef>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>validate</id>
-                            <phase>validate</phase>
-                            <goals>
-                            <goal>check</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.6</version>
+                    <version>0.8.8</version>
                 </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
-            <!-- ===== Génération de la Javadoc ===== -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
-                <configuration>
-                    <quiet>true</quiet>
-                    <locale>fr</locale>
-                </configuration>
-            </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
@@ -238,50 +167,20 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
                 <executions>
                     <execution>
-                        <id>prepare-agent</id>
-                            <goals>
-                                <goal>prepare-agent</goal>
-                            </goals>
-                            <configuration>
-                    <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-                                <propertyName>surefireArgLine</propertyName>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>report</id>
-                            <phase>test</phase>
-                                <goals>
-                                <goal>report</goal>
-                                </goals>
-                                <configuration>
-                                        <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-                                        <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-                                </configuration>
-                        </execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
